--- a/index.html
+++ b/index.html
@@ -8,21 +8,33 @@
         <title>Very Berry</title>
         <link href="./assets/css/normalize.css" rel="stylesheet" />
         <link href="./assets/css/reset.css" rel="stylesheet" />
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/header.css">
+        <link rel="stylesheet" href="assets/css/menu/menu-list.css">
+        <link rel="stylesheet" href="assets/css/menu/menu-item.css">
+        <link rel="stylesheet" href="assets/css/menu/menu-link.css">
+        <link rel="stylesheet" href="assets/css/banner/banner.css">
+        <link rel="stylesheet" href="assets/css/banner/banner-image.css">
+        <link rel="stylesheet" href="assets/css/banner/banner-title.css">
     </head>
     <body>
         <header>
-            <logo>
-                <img src="assets/img/logo.jpg" alt="very berry">
-            </logo>
-            <nav>
-                <ul>
-                    <li><a id="active" href="#">Home</a></li>
-                    <li><a href="#">Recipes</a></li>
-                    <li><a href="#">Get to know us</a></li>
-                    <li><a href="#">Community</a></li>
+            <img src="assets/img/logo.png" alt="very berry" class="logo">
+            <nav class="menu">
+                <ul class="menu__list">
+                    <li class="menu__item"><a href="#" class="menu__link active">Home</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Recipes</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Get to know us</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Community</a></li>
                 </ul>
             </nav>
         </header>
+        <section class="banner">
+            <img src="assets/img/banner.jpg" alt="happy pokemons" class="banner__image">
+            <h2 class="banner__title">Know your berries!</h2>
+        </section>
+        <section class="about">
+            <h2 class="about__title">Berries are there to be used.</h2>
+            <p class="about__description">You can recover your pokemons from different status and really improve your battele skills.</p>
+        </section>
     </body>
 </html>
