adding the berries

--- a/index.html
+++ b/index.html
@@ -9,12 +9,24 @@
         <link href="./assets/css/normalize.css" rel="stylesheet" />
         <link href="./assets/css/reset.css" rel="stylesheet" />
         <link rel="stylesheet" href="assets/css/header.css">
-        <link rel="stylesheet" href="assets/css/menu/menu-list.css">
-        <link rel="stylesheet" href="assets/css/menu/menu-item.css">
-        <link rel="stylesheet" href="assets/css/menu/menu-link.css">
+        <link rel="stylesheet" href="assets/css/menu/menu.css">
+        <link rel="stylesheet" href="assets/css/menu/menu__list.css">
+        <link rel="stylesheet" href="assets/css/menu/menu__item.css">
+        <link rel="stylesheet" href="assets/css/menu/menu__link.css">
         <link rel="stylesheet" href="assets/css/banner/banner.css">
         <link rel="stylesheet" href="assets/css/banner/banner-image.css">
         <link rel="stylesheet" href="assets/css/banner/banner-title.css">
+        <link rel="stylesheet" href="assets/css/about/about.css">
+        <link rel="stylesheet" href="assets/css/about/about__title.css">
+        <link rel="stylesheet" href="assets/css/about/about__description.css">
+        <link rel="stylesheet" href="assets/css/berries/berries.css">
+        <link rel="stylesheet" href="assets/css/berries/berries_content.css">
+        <link rel="stylesheet" href="assets/css/berries/berry.css">
+        <link rel="stylesheet" href="assets/css/berries/berry__button.css">
+        <link rel="stylesheet" href="assets/css/berries/berry__description.css">
+        <link rel="stylesheet" href="assets/css/berries/berry__image.css">
+        <link rel="stylesheet" href="assets/css/berries/berry__title.css">
+        <link rel="stylesheet" href="assets/css/berries/berries_content.css">
     </head>
     <body>
         <header>
@@ -33,8 +45,58 @@
             <h2 class="banner__title">Know your berries!</h2>
         </section>
         <section class="about">
-            <h2 class="about__title">Berries are there to be used.</h2>
-            <p class="about__description">You can recover your pokemons from different status and really improve your battele skills.</p>
+            <h2 class="about__title">Berries are there to be used</h2>
+            <p class="about__description">You can recover your pokemons from different status and really improve your battle skills.</p>
         </section>
+        <section class="berries">
+                <div class="berry">
+                    <img alt="Aspear Berry" class="berry__image" src="./assets/img/berries/aspear-berry.jpg" />
+                    <div class="berries__content">
+                        <h4 class="berry__title">Aspear Berry</h4>
+                        <p class="berry__description">Cures freeze.</p>
+                        <button class="berry__button">See more</button>
+                    </div>
+                </div>
+                <div class="berry">
+                    <img alt="Cheri Berry" class="berry__image" src="./assets/img/berries/cheri-berry.jpg" />
+                    <div class="berries__content">
+                        <h4 class="berry__title">Cheri Berry</h4>
+                        <p class="berry__description">Cures paralysis.</p>
+                        <button class="berry__button">See more</button>
+                    </div>
+                </div>
+                <div class="berry">
+                    <img alt="Chesto Berry" class="berry__image" src="./assets/img/berries/chesto-berry.jpg" />
+                    <div class="berries__content">
+                        <h4 class="berry__title">Chesto Berry</h4>
+                        <p class="berry__description">Cures sleep.</p>
+                        <button class="berry__button">See more</button>
+                    </div>
+                </div>
+                <div class="berry">
+                    <img alt="Leppa Berry" class="berry__image" src="./assets/img/berries/leppa-berry.jpg" />
+                    <div class="berries__content">
+                        <h4 class="berry__title">Leppa Berry</h4>
+                        <p class="berry__description">Restores 10 PP.</p>
+                        <button class="berry__button">See more</button>
+                    </div>
+                </div>
+                <div class="berry">
+                    <img alt="Pecha Berry" class="berry__image" src="./assets/img/berries/pecha-berry.jpg" />
+                    <div class="berries__content">
+                        <h4 class="berry__title">Pecha Berry</h4>
+                        <p class="berry__description">Cures poison.</p>
+                        <button class="berry__button">See more</button>
+                    </div>
+                </div>
+                <div class="berry">
+                    <img alt="Rawst Berry" class="berry__image" src="./assets/img/berries/rawst-berry.jpg" />
+                    <div class="berries__content">
+                        <h4 class="berry__title">Rawst Berry</h4>
+                        <p class="berry__description">Cures burn.</p>
+                        <button class="berry__button">See more</button>
+                    </div>
+                </div>
+            </section>
     </body>
 </html>
